--- a/index.html
+++ b/index.html
@@ -1,50 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>GPS Tracker</title>
-  <link rel="apple-touch-icon" href="icon.png"> <!-- Optional: Add your app icon -->
+  <link rel="apple-touch-icon" href="icon.png" />
+  <link
+    rel="stylesheet"
+    href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-sA+e2mAb8N0C1FE5g7r5SyLCozH/4hN43OGaEh5b8zY="
+    crossorigin=""
+  />
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
+      font-family: sans-serif;
       background: #111;
       color: white;
-      font-family: sans-serif;
       overflow: hidden;
     }
-    canvas {
-      display: block;
-      width: 100%;
-      height: 100%;
+    #map, #gpsChart {
+      height: 40%;
+    }
+    #controls {
+      display: flex;
+      justify-content: center;
+      margin: 10px;
+    }
+    #controls button {
+      margin: 0 10px;
+      padding: 10px 20px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
 
+<div id="map"></div>
 <canvas id="gpsChart"></canvas>
+<div id="controls">
+  <button id="startBtn">Start Tracking</button>
+  <button id="stopBtn">Stop Tracking</button>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script
+  src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-nPLb6GmLFjFp0FE8As0b8wiyYem+nG5eAa4eOqznxlw="
+  crossorigin=""
+></script>
+
 <script>
+  let watchId = null;
+  let history = JSON.parse(localStorage.getItem('gpsHistory')) || [];
+
+  const map = L.map('map').setView([0, 0], 2);
+  const marker = L.marker([0, 0]).addTo(map);
+
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 19,
+  }).addTo(map);
+
   const ctx = document.getElementById('gpsChart').getContext('2d');
 
   const gpsChart = new Chart(ctx, {
     type: 'line',
     data: {
-      labels: [],
+      labels: history.map(p => p.time),
       datasets: [{
         label: 'Latitude',
         borderColor: 'red',
-        data: [],
+        data: history.map(p => p.lat),
         fill: false,
       }, {
         label: 'Longitude',
         borderColor: 'blue',
-        data: [],
+        data: history.map(p => p.lon),
         fill: false,
       }]
     },
@@ -52,27 +87,20 @@
       responsive: true,
       animation: false,
       scales: {
-        x: {
-          title: { display: true, text: 'Time' },
-        },
-        y: {
-          title: { display: true, text: 'Degrees' }
-        }
+        x: { title: { display: true, text: 'Time' }},
+        y: { title: { display: true, text: 'Degrees' }}
       },
       plugins: {
         legend: {
-          position: 'top',
-          labels: {
-            color: 'white'
-          }
+          labels: { color: 'white' }
         }
       }
     }
   });
 
-  function addGPSPoint(lat, lon) {
-    const now = new Date().toLocaleTimeString();
-    gpsChart.data.labels.push(now);
+  function updateChartAndMap(lat, lon) {
+    const time = new Date().toLocaleTimeString();
+    gpsChart.data.labels.push(time);
     gpsChart.data.datasets[0].data.push(lat);
     gpsChart.data.datasets[1].data.push(lon);
 
@@ -83,25 +111,56 @@
     }
 
     gpsChart.update();
+
+    marker.setLatLng([lat, lon]);
+    map.setView([lat, lon], 16);
   }
 
-  function handleLocation(position) {
-    const { latitude, longitude } = position.coords;
-    console.log(`Lat: ${latitude}, Lon: ${longitude}`);
-    addGPSPoint(latitude, longitude);
+  function saveHistory(lat, lon) {
+    const time = new Date().toLocaleTimeString();
+    history.push({ lat, lon, time });
+    localStorage.setItem('gpsHistory', JSON.stringify(history));
+  }
+
+  function handleLocation(pos) {
+    const { latitude: lat, longitude: lon } = pos.coords;
+    updateChartAndMap(lat, lon);
+    saveHistory(lat, lon);
+  }
+
+  function handleError(err) {
+    alert("Location error: " + err.message);
   }
 
   function startTracking() {
-    if (navigator.geolocation) {
-      navigator.geolocation.watchPosition(handleLocation, 
-        err => alert("GPS error: " + err.message), 
-        { enableHighAccuracy: true, maximumAge: 1000 });
-    } else {
-      alert("Geolocation not supported");
+    if (!navigator.geolocation) {
+      alert("Geolocation not supported by your device.");
+      return;
+    }
+    if (!watchId) {
+      watchId = navigator.geolocation.watchPosition(handleLocation, handleError, {
+        enableHighAccuracy: true,
+        maximumAge: 1000,
+        timeout: 10000
+      });
     }
   }
 
-  startTracking();
+  function stopTracking() {
+    if (watchId !== null) {
+      navigator.geolocation.clearWatch(watchId);
+      watchId = null;
+    }
+  }
+
+  document.getElementById("startBtn").addEventListener("click", startTracking);
+  document.getElementById("stopBtn").addEventListener("click", stopTracking);
+
+  // Restore last known position on map
+  if (history.length > 0) {
+    const last = history[history.length - 1];
+    updateChartAndMap(last.lat, last.lon);
+  }
 </script>
 
 </body>
